--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.1",
+    "firebase": "^10.12.2",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.10.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-json-pretty": "^2.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
